<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/takepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="takePic"
            android:text="@string/btn_cmd_pic" />

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cmd_exit" />

        <Button
            android:id="@+id/sendcmd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cmd_send" />

        <Button
            android:id="@+id/getstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cmd_status" />
    </LinearLayout>

    <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <SeekBar
        android:id="@+id/horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/commandtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status" />

</LinearLayout>